--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -207,10 +207,12 @@ input, select, textarea {
 	h3 {
 		font-size: 1.5em;
 		line-height: 1.5em;
+		margin-left: 15%;
+		margin-right: 15%;
 	}
 
 	h4 {
-		font-size: 1.1em;
+		font-size: 1.5em;
 		line-height: 1.5em;
 	}
 
@@ -317,7 +319,7 @@ input, select, textarea {
 	}
 
 		a:hover {
-			color: #4696e5;
+			color: #3b78cc;
 		}
 
 	strong, b {
@@ -1968,7 +1970,7 @@ input, select, textarea {
 		button.primary,
 		.button.primary {
 			box-shadow: none;
-			background-color: #4696e5;
+			background-color: #3b78cc;
 			color: #ffffff !important;
 		}
 
@@ -2173,8 +2175,8 @@ input, select, textarea {
 		input[type="email"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #4696e5;
-			box-shadow: 0 0 0 1px #4696e5;
+			border-color: #3b78cc;
+			box-shadow: 0 0 0 1px #3b78cc;
 		}
 
 	.select-wrapper:before {
@@ -2194,15 +2196,15 @@ input, select, textarea {
 
 	input[type="checkbox"]:checked + label:before,
 	input[type="radio"]:checked + label:before {
-		background-color: #4696e5;
-		border-color: #4696e5;
+		background-color: #3b78cc;
+		border-color: #3b78cc;
 		color: #ffffff;
 	}
 
 	input[type="checkbox"]:focus + label:before,
 	input[type="radio"]:focus + label:before {
-		border-color: #4696e5;
-		box-shadow: 0 0 0 1px #4696e5;
+		border-color: #3b78cc;
+		box-shadow: 0 0 0 1px #3b78cc;
 	}
 
 	::-webkit-input-placeholder {
@@ -2247,7 +2249,8 @@ input, select, textarea {
 		}
 
 		.icon > .label {
-			display: none;
+		    display: none;
+		    text-align: left;
 		}
 
 		.icon:before {
@@ -2282,7 +2285,7 @@ input, select, textarea {
 		}
 
 		.image.left, .image.right {
-			max-width: 40%;
+			max-width: 30%;
 		}
 
 			.image.left img, .image.right img {
@@ -2704,6 +2707,8 @@ input, select, textarea {
 		font-size: 1.1em;
 		margin-top: -0.25em;
 		line-height: 1.5em;
+		margin-left: 50px;
+		margin-right: 50px;
 	}
 
 	header h4 + p,
@@ -2754,15 +2759,15 @@ input, select, textarea {
 	}
 
 		.spotlight .image {
-			width: 30%;
-			border-radius: 100%;
+			width: 60%;
+			border-radius: 8px;
 			margin: 0 3em 0 0;
 			display: block;
 		}
 
 			.spotlight .image img {
 				display: block;
-				border-radius: 100%;
+				border-radius: 8px;
 				width: 100%;
 			}
 
@@ -2942,7 +2947,7 @@ input, select, textarea {
 				}
 
 		.wrapper.style1 {
-			background-color: #4696e5;
+			background-color: #3b78cc;
 			color: #d1e5f9;
 		}
 
@@ -2979,7 +2984,7 @@ input, select, textarea {
 				.wrapper.style1 .button.primary {
 					box-shadow: none;
 					background-color: #ffffff;
-					color: #4696e5 !important;
+					color: #3b78cc !important;
 				}
 
 			.wrapper.style1 label {
@@ -3024,7 +3029,7 @@ input, select, textarea {
 			.wrapper.style1 input[type="radio"]:checked + label:before {
 				background-color: #ffffff;
 				border-color: #ffffff;
-				color: #4696e5;
+				color: #3b78cc;
 			}
 
 			.wrapper.style1 input[type="checkbox"]:focus + label:before,
@@ -3058,7 +3063,7 @@ input, select, textarea {
 			}
 
 			.wrapper.style1 .image {
-				box-shadow: 0 0 0 4px #4696e5, 0 0 0 5px rgba(255, 255, 255, 0.25);
+				box-shadow: 0 0 0 4px #3b78cc, 0 0 0 5px rgba(255, 255, 255, 0.25);
 			}
 
 				.wrapper.style1 .image.phone {
@@ -3173,7 +3178,7 @@ input, select, textarea {
 				.wrapper.style2 button.primary,
 				.wrapper.style2 .button.primary {
 					box-shadow: none;
-					background-color: #4696e5;
+					background-color: #3b78cc;
 					color: #ffffff !important;
 				}
 
@@ -3212,8 +3217,8 @@ input, select, textarea {
 				.wrapper.style2 input[type="email"]:focus,
 				.wrapper.style2 select:focus,
 				.wrapper.style2 textarea:focus {
-					border-color: #4696e5;
-					box-shadow: 0 0 0 1px #4696e5;
+					border-color: #3b78cc;
+					box-shadow: 0 0 0 1px #3b78cc;
 				}
 
 			.wrapper.style2 .select-wrapper:before {
@@ -3233,15 +3238,15 @@ input, select, textarea {
 
 			.wrapper.style2 input[type="checkbox"]:checked + label:before,
 			.wrapper.style2 input[type="radio"]:checked + label:before {
-				background-color: #4696e5;
-				border-color: #4696e5;
+				background-color: #3b78cc;
+				border-color: #3b78cc;
 				color: #ffffff;
 			}
 
 			.wrapper.style2 input[type="checkbox"]:focus + label:before,
 			.wrapper.style2 input[type="radio"]:focus + label:before {
-				border-color: #4696e5;
-				box-shadow: 0 0 0 1px #4696e5;
+				border-color: #3b78cc;
+				box-shadow: 0 0 0 1px #3b78cc;
 			}
 
 			.wrapper.style2 ::-webkit-input-placeholder {
@@ -3326,7 +3331,7 @@ input, select, textarea {
 			}
 
 				.wrapper.style2 a:hover {
-					color: #4696e5;
+					color: #3b78cc;
 				}
 
 			.wrapper.style2 strong, .wrapper.style2 b {
@@ -3387,7 +3392,7 @@ input, select, textarea {
 				.wrapper.style3 button.primary,
 				.wrapper.style3 .button.primary {
 					box-shadow: none;
-					background-color: #4696e5;
+					background-color: #3b78cc;
 					color: #ffffff !important;
 				}
 
@@ -3426,8 +3431,8 @@ input, select, textarea {
 				.wrapper.style3 input[type="email"]:focus,
 				.wrapper.style3 select:focus,
 				.wrapper.style3 textarea:focus {
-					border-color: #4696e5;
-					box-shadow: 0 0 0 1px #4696e5;
+					border-color: #3b78cc;
+					box-shadow: 0 0 0 1px #3b78cc;
 				}
 
 			.wrapper.style3 .select-wrapper:before {
@@ -3447,15 +3452,15 @@ input, select, textarea {
 
 			.wrapper.style3 input[type="checkbox"]:checked + label:before,
 			.wrapper.style3 input[type="radio"]:checked + label:before {
-				background-color: #4696e5;
-				border-color: #4696e5;
+				background-color: #3b78cc;
+				border-color: #3b78cc;
 				color: #ffffff;
 			}
 
 			.wrapper.style3 input[type="checkbox"]:focus + label:before,
 			.wrapper.style3 input[type="radio"]:focus + label:before {
-				border-color: #4696e5;
-				box-shadow: 0 0 0 1px #4696e5;
+				border-color: #3b78cc;
+				box-shadow: 0 0 0 1px #3b78cc;
 			}
 
 			.wrapper.style3 ::-webkit-input-placeholder {
@@ -3540,7 +3545,7 @@ input, select, textarea {
 			}
 
 				.wrapper.style3 a:hover {
-					color: #4696e5;
+					color: #3b78cc;
 				}
 
 			.wrapper.style3 strong, .wrapper.style3 b {
@@ -3611,7 +3616,7 @@ input, select, textarea {
 /* Header */
 
 	#header {
-		background-color: #4696e5;
+		background-color: #3b78cc;
 		color: #d1e5f9;
 		padding: 4.5em 0 2.5em 0 ;
 		-moz-align-items: center;
@@ -3667,7 +3672,7 @@ input, select, textarea {
 			#header .button.primary {
 				box-shadow: none;
 				background-color: #ffffff;
-				color: #4696e5 !important;
+				color: #3b78cc !important;
 			}
 
 		#header label {
@@ -3712,7 +3717,7 @@ input, select, textarea {
 		#header input[type="radio"]:checked + label:before {
 			background-color: #ffffff;
 			border-color: #ffffff;
-			color: #4696e5;
+			color: #3b78cc;
 		}
 
 		#header input[type="checkbox"]:focus + label:before,
@@ -3746,7 +3751,7 @@ input, select, textarea {
 		}
 
 		#header .image {
-			box-shadow: 0 0 0 4px #4696e5, 0 0 0 5px rgba(255, 255, 255, 0.25);
+			box-shadow: 0 0 0 4px #3b78cc, 0 0 0 5px rgba(255, 255, 255, 0.25);
 		}
 
 			#header .image.phone {
@@ -4092,7 +4097,7 @@ input, select, textarea {
 		}
 
 			#footer a:hover {
-				color: #4696e5;
+				color: #3b78cc;
 			}
 
 		#footer strong, #footer b {
