--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -115,7 +115,7 @@ input, select, textarea {
 /* Type */
 
 	body {
-		color: #999999;
+		color: #555555;
 	}
 
 	html, input, select, textarea {
@@ -159,9 +159,19 @@ input, select, textarea {
 		-ms-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
 		transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
 		text-decoration: none;
-		border-bottom: dotted 1px;
+		border-bottom: dotted 1.5px;
 	}
-
+		/* unvisited link */
+		a:link {
+			color: #4c4c8c;
+ 		 }
+  
+ 		 /* visited link */
+ 		 a:visited {
+			color: purple;
+ 		 }
+  
+  /
 		a:hover {
 			border-bottom-color: transparent !important;
 		}
