--- a/assets/sass/components/_spotlight.scss
+++ b/assets/sass/components/_spotlight.scss
@@ -12,14 +12,14 @@
 		margin: 0 0 _size(element-margin) 0;
 
 		.image {
-			width: 30%;
-			border-radius: 100%;
+			width: 100%;
+			border-radius: 10px;
 			margin: 0 (_size(element-margin) * 1.5) 0 0;
 			display: block;
 
 			img {
 				display: block;
-				border-radius: 100%;
+				border-radius: 8px;
 				width: 100%;
 			}
 		}
@@ -31,6 +31,39 @@
 				margin-bottom: 0;
 			}
 		}
+
+		&:nth-child(2n) {
+			@include vendor('flex-direction', 'row-reverse');
+
+			.image {
+				margin: 0 0 0 (_size(element-margin) * 1.5);
+			}
+
+			.content {
+				text-align: right;
+			}
+		}
+
+		// .image {
+		// 	width: 30%;
+		// 	border-radius: 100%;
+		// 	margin: 0 (_size(element-margin) * 1.5) 0 0;
+		// 	display: block;
+
+		// 	img {
+		// 		display: block;
+		// 		border-radius: 100%;
+		// 		width: 100%;
+		// 	}
+		// }
+
+		// .content {
+		// 	width: 70%;
+
+		// 	> :last-child {
+		// 		margin-bottom: 0;
+		// 	}
+		// }
 
 		&:nth-child(2n) {
 			@include vendor('flex-direction', 'row-reverse');
